# data-automation

./: .gitattributes  .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: tests.yml
data/: sales_sample.csv
src/etl_pipeline/: __init__.py  __main__.py  cache.py  circuit_breaker.py  cli.py  config.py  http_client.py  logging_setup.py
src/etl_pipeline/extract/: __init__.py  fx_api.py  sales_csv.py  weather_api.py
src/etl_pipeline/load/: __init__.py  dry_run.py  html_report.py  sqlite_loader.py
src/etl_pipeline/templates/: report.html.j2
src/etl_pipeline/transform/: __init__.py  pipeline.py
tests/: conftest.py  test_cache.py  test_circuit_breaker.py  test_config.py  test_dry_run.py  test_extract_fx.py  test_extract_sales.py  test_extract_weather.py  test_http_client.py  test_load.py  test_logging_setup.py  test_transform.py
