[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "etl-pipeline"
version = "0.1.0"
description = "Multi-API ETL: normalises multi-currency sales data, enriches with weather, lands in SQLite + HTML report."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Beso Meladze" }]
license = { text = "MIT" }
keywords = ["etl", "automation", "data-engineering", "api-integration"]
dependencies = [
    "requests>=2.32",
    "pandas>=2.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests",
    "types-PyYAML",
    "pandas-stubs",
]

[project.scripts]
etl = "etl_pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/etl_pipeline"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
explicit_package_bases = true
